Se implementaron los puntos restantes hasta el 15 y se creó la interfaz gráfica

--- a/AppWeb/index.html
+++ b/AppWeb/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     </head>
-<body>
+<body background="../Images/Fondo.jpg">
 
     <div class="container-lg">
         <div class="card" style="margin: 3% 1% 2% 1%; padding-top: 1%;">
@@ -19,6 +19,16 @@
             <button type="button" class="btn btn-primary btn-ejc"  id="procesar" style="width: 100px;margin-bottom: 10px;margin-top: 10px;"> Procesar </button>
         </div>
     </div>
+
+
+    <section class="pricing py-2">
+        <div class= "container-xl">
+            <div class="container-fluid my-4 respuesta" style="background: white; background-color: white; border-radius: 10px; border: 0.5px solid gainsboro;"> 
+            
+            </div>
+        </div>  
+    </section>
+
     <script src="logic.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
